# translator

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  test-translation.txt
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/migration/: __init__.py  alembic.ini  runner.py
backend/migration/alembic/: env.py
backend/scripts/: deploy.sh  lint.sh  migrate.sh  run.sh  test.sh
backend/src/: main.py
backend/src/acps/: acs.json  dto.py  handler.py  service.py
backend/src/artifact/: dto.py  handler.py  model.py  pdf_service.py  service.py
backend/src/auth/: dto.py  handler.py  model.py  oauth_model.py  service.py  sso_dto.py  sso_handler.py  sso_service.py
backend/src/chunk/: dto.py  model.py
backend/src/common/: email.py  erri.py  llm.py  resp.py  trap.py  utils.py
backend/src/conf/: config.py  db.py  kafka.py  logging.py  openapi.py  redis.py  storage.py
backend/src/conversation/: dto.py  handler.py  model.py  service.py
backend/src/document/: dto.py  extractor.py  model.py
backend/src/glossary/: dto.py  handler.py  model.py  service.py
backend/src/llm/: service.py
backend/src/middleware/: auth.py  logging.py
backend/src/pipeline/: dto.py  event_dto.py  event_store.py  events.py  handler.py  model.py  service.py
backend/src/project/: dto.py  handler.py  model.py  service.py
backend/src/storage/: backend.py  service.py
backend/src/tenant/: dto.py  handler.py  model.py  service.py
backend/src/user/: dto.py  handler.py  model.py  service.py
backend/src/worker/: base.py  chat_executor.py  pipeline_executor.py  run.py
backend/src/ws/: handler.py  manager.py
backend/tests/: cfg.yml
backend/tests/demo/: __main__.py  tools.py
backend/tests/integration/: conftest.py  test_auth_password.py  test_auth_register.py  (+7 more)
(+145 files in other folders)
